reset win count

--- a/pom.xml
+++ b/pom.xml
@@ -71,14 +71,15 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.18.2-R0.1-SNAPSHOT</version>
+            <version>1.20-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.gcnt</groupId>
             <artifactId>skywarsreloaded</artifactId>
             <version>5.6.9</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/jars/SWR-5.6.30.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
