--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,8 +2,11 @@ name: Swhelper
 version: '${project.version}'
 main: com.hb.swhelper.SWHelper
 api-version: 1.18
+depend:
+  - Skywars
+
 
 commands:
   swh:
     description: This is the main plugin command.
-    usage: /swh rkit <true|false>
+    usage: '/swh rkit <0|1|2|3> 0: disable kit; 1: player can choose kit; 2: each player gets different random kits; 3: each player gets same kit§r'
